crates/plotnik-tests/tests/04-emit/bytecode/definitions/ref_atomic_child_impossible.txt
Impossible = (binary_expression
  right: (_)
  left: (_)
)

Q = (program
  (expression_statement (Impossible) @expr)
)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:7:25
  |
1 |   Impossible = (binary_expression
  |  ______________-
2 | |   right: (_)
3 | |   left: (_)
4 | | )
  | |_- defined here
...
7 |     (expression_statement (Impossible) @expr)
  |                           ^^^^^^^^^^^^
